@@ -110,6 +110,8 @@ public interface ShopKeeper extends Environmental, Economics
 	public final static int DEAL_READABLES=33;
 	/** shopkeeper type constant, means they buy and sell any readables*/
 	public final static int DEAL_CLOTHSPINNER=34;
+	/** shopkeeper type constant, means they buy and sell any children*/
+	public final static int DEAL_CHILDREN=35;
 
 	/** shopkeeper integer sets denoting the DEAL_* constants which conflict with each other */
 	public final static int[][] DEAL_CONFLICTS={
@@ -129,7 +131,8 @@ public interface ShopKeeper extends Environmental, Economics
 		"VEGETABLES","HIDES","LUMBER","METALS","ROCKS",
 		"CLAN BANKER", "INN KEEPER", "SHIP SELLER",
 		"CLAN SHIP SELLER", "SLAVES", "POSTMAN", "CLAN POSTMAN",
-		"AUCTIONEER","INSTRUMENTS","BOOKS","READABLES","CLOTHS"
+		"AUCTIONEER","INSTRUMENTS","BOOKS","READABLES","CLOTHS",
+		"CHILDREN"
 	};
 
 	/**
